--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <link
+  rel="stylesheet"
+  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+/>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
